Fix healthcheck always succeeds as it hits the frontend fallback
